css/main.css
/* Core sytles */
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  transition: 0.2s;
  font-family: "THICCCBOI";
}

.container {
  max-width: 1500px;
  margin: 0 auto;
}

/* Header styles */
.header {
  width: 100%;
  padding: 30px 100px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.navbar-items {
  list-style: none;
  display: flex;
  gap: 40px;
}

.navbar-items__item a {
  font-size: 18px;
  text-decoration: none;
  font-weight: 500;
  color: black;
}

.navbar-items__item:hover a {
  color: #7371ff;
}

.header-btn {
  display: flex;
  gap: 10px;
  align-items: center;
  background-color: rgb(18, 18, 41);
  color: #ffffff;
  text-decoration: none;
  padding: 20px 30px;
  border-radius: 50px;
}

.header-btn:hover {
  background-color: #7371ff;
  transform: translateY(-8px);
}

.header-btn:hover i {
  transform: translateX(8px);
}

.hamburger-icon {
  display: none;
  flex-direction: column;
  gap: 5px;
  cursor: pointer;
}

.hamburger-icon span {
  width: 40px;
  height: 4px;
  border-radius: 20px;
  background-color: black;
}

.hamburger-icon:hover span {
  background-color: #7371ff;
}

.border {
  border: 1px solid #e6e6ed;
}

/* Agency sytyles */
.agency {
  padding: 100px 10px 100px 100px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.agency-info {
  width: 48%;
}

.agency-info__subtitle {
  display: flex;
  align-items: center;
  gap: 15px;
}

.subtitle {
  font-size: 18px;
  font-weight: 700;
}

.subtitle-line {
  display: inline-block;
  width: 80px;
  height: 2px;
  background-color: #121229;
}

.agency-info__title {
  margin-top: 20px;
  font-size: 76px;
  font-weight: 500;
  position: relative;
}

.sircl-img {
  position: absolute;
  right: 40%;
  bottom: -2px;
  z-index: -1;
}

.agency-info__info {
  width: 80%;
  margin-top: 20px;
  font-size: 18px;
  font-weight: 500;
  color: #39394f;
  line-height: 30px;
}

.agency-info__btns {
  display: flex;
  gap: 30px;
  align-items: center;
  margin-top: 50px;
}

.btns-btn1 {
  padding: 30px 50px;
  background-color: #121229;
  border-radius: 50px;
  display: flex;
  align-items: center;
  gap: 15px;
  text-decoration: none;
  color: #ffffff;
  font-size: 18px;
  font-weight: 700;
}

.btns-btn1:hover {
  background-color: #7371ff;
  transform: translateY(-5px);
}

.btns-btn1:hover i {
  transform: translateX(10px);
}

.btns-btn2 {
  display: inline-block;
  text-decoration: none;
  color: #121229;
  font-size: 18px;
  font-weight: 500;
  padding: 30px 50px;
  border-radius: 50px;
  border: 1px solid black;
}

.btns-btn2:hover {
  background-color: #e1e0ff;
  transform: translateY(-5px);
}

.agency-banner {
  width: 700px;
}

.agency-banner img {
  width: 100%;
}

/* Services sytles */
.services {
  padding: 100px 0;
}

.services-subtitle {
  padding: 0 100px;
  display: flex;
  align-items: center;
  gap: 15px;
}

.ervices-subtitle__name {
  font-size: 18px;
  font-weight: 700;
  letter-spacing: 2px;
}

.services-subtitle__line,
.line {
  width: 80px;
  height: 2.5px;
  background-color: #121229;
  display: inline-block;
}

.services-title__items {
  margin-top: 30px;
  padding: 0 100px;
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
}

.services-title {
  font-size: 50px;
  font-weight: 600;
}

.services-title__r-l {
  display: flex;
  gap: 15px;
}

.services-title__r-l > i {
  font-size: 24px;
  padding: 18px 20px;
  color: #ffffff;
  background-color: #121229;
  border-radius: 50%;
  cursor: pointer;
}

.services-title__r-l i:hover {
  background-color: #7371ff;
}

.services-cards {
  padding: 20px 100px;
  display: flex;
  justify-content: space-between;
  margin-top: 30px;
}

.services-card {
  padding: 50px 40px;
  width: 31%;
  border-radius: 30px;
  cursor: pointer;
}

.services-card__image img {
  width: 50%;
}

.services-card__title {
  margin-top: 20px;
  font-size: 28px;
  font-weight: 600;
  color: #121229;
}

.services-card__info {
  margin-top: 20px;
  margin-bottom: 30px;
  font-size: 18px;
  line-height: 30px;
  color: #121229;
}

.services-card__btn {
  display: flex;
  align-items: center;
  font-size: 18px;
  gap: 10px;
  text-decoration: none;
  color: #121229;
}

.services-card:hover {
  transform: translateY(-10px);
}

.services-card:hover i {
  transform: translateX(10px);
}

.services-card:hover img {
  width: 52%;
}

.services-card:hover .services-card__btn {
  color: #7371ff;
}

.yellow {
  background-color: #ffe4b0;
}

.grey {
  background-color: #e1e0ff;
}

.blue {
  background-color: #c3edff;
}

.services-btns {
  margin-top: 30px;
  display: flex;
  justify-content: center;
  gap: 30px;
}

.services-btn1 {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 15px;
  padding: 25px 40px;
  background-color: #121229;
  text-decoration: none;
  color: #ffffff;
  border-radius: 50px;
  font-size: 18px;
}

.services-btn1:hover {
  background-color: #7371ff;
  transform: translateY(-8px);
}

.services-btn1:hover i {
  transform: translateX(5px);
}

.services-btn2 {
  padding: 25px 40px;
  text-decoration: none;
  color: #121229;
  font-size: 18px;
  border-radius: 50px;
  border: 1px solid black;
}

.services-btn2:hover {
  transform: translateY(-8px);
  background-color: #e1e0ff;
}

.none {
  display: none;
}

/* About styles */
.about {
  padding: 150px 80px 100px 80px;
}

.about-subtitle {
  text-align: center;
  font-size: 18px;
  letter-spacing: 2px;
  color: #121229;
}

.about-title {
  width: 60%;
  margin: 20px auto;
  line-height: 66px;
  font-size: 50px;
  color: #121229;
  text-align: center;
}

.text-nowrap {
  white-space: nowrap;
}

.about-info {
  margin-top: 30px auto;
  text-align: center;
  margin: 0 auto;
  font-size: 18px;
  color: #39394f;
  line-height: 30px;
  width: 60%;
}

.about-banner {
  width: 100%;
  margin-top: 20px;
}

.about-banner img {
  width: 100%;
}

.about-btns {
  display: flex;
  justify-content: center;
}
/* ... */

